--- a/public/style.css
+++ b/public/style.css
@@ -6,15 +6,12 @@ h1{
 body{
     background-color: black;
 }
-<<<<<<< HEAD
 #song-input
 {
     height:50px;
     width: 600px;
     font-size:14pt;
-=======
-
+}
 html {
   font-family:"Kode Mono", monospace; /*font from google */
->>>>>>> b808c6a8fcb06e123993aade7e88554508700651
 }
