--- a/public/style.css
+++ b/public/style.css
@@ -30,4 +30,11 @@ html {
 
 #guessingTable {
   background-color: white;
+  border: 2px solid black;
+}
+
+#guessingTable * {
+  padding: 10px;
+  border: 1px solid black;
+  border-radius: 3px;
 }
