created background image

--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,12 @@
 h1{
-    color: black;
+    color: white;
     text-align: center;
     font-size: 30pt;
   }
 body{
     background-color: #23A3E5;
+    background-image: url("https://live.staticflickr.com/7363/9450562837_6caea5878c_b.jpg");
+    background-repeat: repeat;
 }
 #playlist-url-box
 {
