added boolean value check for artist check and added styling for playlist url

--- a/public/style.css
+++ b/public/style.css
@@ -8,8 +8,8 @@ body{
 }
 #playlist-url-box
 {
-    height:50px;
-    width: 600px;
+    height:fit-content;
+    width: fit-content;
     font-size:14pt;
 }
 #submitButton
