--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,8 @@ h1{
   }
 body{
     background-color: #23A3E5;
-    background-image: url("https://live.staticflickr.com/7363/9450562837_6caea5878c_b.jpg");
+    background-image: url("back.png");
+
     background-repeat: repeat;
 }
 #playlist-url-box
