--- a/public/style.css
+++ b/public/style.css
@@ -1,16 +1,16 @@
 h1{
-    color: white;
+    color: black;
     text-align: center;
     font-size: 30pt;
   }
 body{
     background-color: #23A3E5;
-    background-image: url("back.png");
+    background-image: url("back2.png");
 
     background-repeat: repeat;
 }
 #playlist-url-box
-{
+{ 
     height:fit-content;
     width: fit-content;
     font-size:14pt;
