--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,7 @@ h1{
   }
 body{
     background-color: #23A3E5;
-    background-image: url("back2.png");
+    background-image: url("assets/back2.png");
 
     background-repeat: repeat;
 }
