--- a/public/style.css
+++ b/public/style.css
@@ -9,16 +9,13 @@ body{
 
     background-repeat: repeat;
 }
-#score{
+#score, #tscore{
    color: black;
     text-align: center;
-    font-size: 10pt;
+    font-size: 20pt;
 }
-#tscore{
-  color: black;
-   text-align: center;
-   font-size: 10pt;
-}
+
+
 #playlist-url-box
 { 
     height:fit-content;
@@ -39,16 +36,18 @@ html {
   display: flex;
   justify-content: center;
   font-size: 40px;
-  color: white;
+  background-color: white;
   position: absolute;
-  top: 10%;
+  top: 15%;
   left: 30%;
+  width: 40%;
+  border-radius: 8px;
 }
 #cc{
   display: flex;
   justify-content: center;
   position: absolute;
-  top: 30%;
+  top: 35%;
   left: 30%;
   width: 40%;
   background-color: white;
